N/A: refactor to with java.util.Base64 encode decode string.